--- a/src/components/numeric-keypad/style.css
+++ b/src/components/numeric-keypad/style.css
@@ -1,36 +1,46 @@
 .keypad {
-  border-top: 1px solid #000;
-  border-right: 1px solid #000;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   grid-template-rows: 4;
   margin: auto;
   padding: 0;
   text-align: center;
-  max-width: 300px;
-  min-width: 200px;
+}
+
+.tile {
+  background: #454545;
+  border: 0;
+  color: #fff;
+  font-size: 2rem;
+  padding: .35em;
+  list-style: none;
+}
+
+.tile:hover {
+  background: #aaa;
+  color: #000;
+}
+
+.tile:active {
+  background: #777;
 }
 
 .digit {
   background: #343434;
-  border: 0;
-  border-bottom: 1px solid #000;
-  border-left: 1px solid #000;
-  color: #fff;
-  font-size: 3rem;
-  padding: .35em;
-  list-style: none;
-  width: calc(1/3);
 }
 
-.digit:hover {
-  background: #454545;
-  color: #fff;
+.equals {
+  background: rgb(80, 80, 194);
 }
 
-.digit:active {
-  background: #565656;
+.backspace {
+  background: rgb(194, 80, 80);
+  font-size: 1.5rem;
+}
+
+.noHover {
+  pointer-events: none;
 }
 
 .row-1 {
